<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:circle="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.ho9586.vivaha.CircleImageView
        android:id="@+id/main_calendar_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
        android:src="@drawable/groom1"
        android:padding="10dp"
        android:elevation="2dp"
        circle:name="@string/calendar" />

   <com.example.ho9586.vivaha.CircleImageView
        android:id="@+id/main_cloud_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
       android:src="@drawable/bride1"
        android:elevation="2dp"
       android:padding="10dp"
        circle:name="@string/cloud" />


   <com.example.ho9586.vivaha.CircleImageView
        android:id="@+id/main_mail_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
       android:src="@drawable/card1"
        android:elevation="2dp"
       android:padding="10dp"
        circle:name="@string/mail" />

   <com.example.ho9586.vivaha.CircleImageView
        android:id="@+id/main_key_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
       android:src="@drawable/events1"
       android:padding="10dp"
        circle:name="@string/key" />

   <com.example.ho9586.vivaha.CircleImageView
        android:id="@+id/main_profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
       android:src="@drawable/location1"
       android:padding="10dp"
        android:elevation="2dp"
        circle:name="@string/profile" />


</merge>